--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Large video files (use external hosting)
+public/about/videos/*.MP4
+public/about/videos/*.MOV
